--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -198,7 +198,7 @@ img {
   background-color: #0073b7 !important;
 }
 .bg-light-blue {
-  background-color: #3c8dbc !important;
+  background-color: #f4726d !important;
 }
 .bg-green {
   background-color: #00a65a !important;
@@ -210,7 +210,7 @@ img {
   background-color: #39cccc !important;
 }
 .bg-olive {
-  background-color: #3d9970 !important;
+  background-color: #f4726d !important;
 }
 .bg-lime {
   background-color: #01ff70 !important;
@@ -1765,8 +1765,8 @@ Component: timeline
   border-bottom-color: #d9dadc;
 }
 .btn.btn-primary {
-  background-color: #3c8dbc;
-  border-color: #367fa9;
+  background-color: #f4726d;
+  border-color: #f4726d;
 }
 .btn.btn-primary:hover,
 .btn.btn-primary:active,
@@ -2262,7 +2262,7 @@ Component: timeline
 */
 .form-box {
   width: 360px;
-  margin: 90px auto 0 auto;
+  margin: 30px auto 0 auto;
 }
 .form-box .header {
   -webkit-border-top-left-radius: 4px;
@@ -2277,7 +2277,8 @@ Component: timeline
   border-top-right-radius: 4px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  background: #3d9970;
+  /* background: #3d9970;*/
+  background: black;
   box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.2);
   padding: 20px 10px;
   text-align: center;
@@ -2415,7 +2416,7 @@ Component: timeline
 */
 /* skin-blue navbar */
 .skin-blue .navbar {
-  background-color: #3c8dbc;
+  background-color: #f4726d;
 }
 .skin-blue .navbar .nav a {
   color: rgba(255, 255, 255, 0.8);
@@ -2440,7 +2441,7 @@ Component: timeline
 }
 /* skin-blue logo */
 .skin-blue .logo {
-  background-color: #367fa9;
+  background-color: black;
   color: #f9f9f9;
 }
 .skin-blue .logo > a {
